feat: kita cukupkan sampai disini

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StoryApp">
         <activity
+            android:name=".views.storydetail.StoryDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.storylist.StoryListActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.register.RegisterActivity"
             android:exported="false" />
         <activity
