--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StoryApp">
         <activity
+            android:name=".views.storyupload.StoryUploadActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.storydetail.StoryDetailActivity"
             android:exported="false" />
         <activity
