feat(map): init map activity & connect to storylist

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StoryApp">
+
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDUrNL4ZnM5OvVIeDOq03Im3Jei2ZwSwxw" />
+
+        <activity
+            android:name=".views.storymap.StoryMapActivity"
+            android:exported="false"
+            android:label="@string/title_activity_story_map" />
         <activity
             android:name=".views.storyupload.StoryUploadActivity"
             android:exported="false" />
