--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDUrNL4ZnM5OvVIeDOq03Im3Jei2ZwSwxw" />
+            android:value="<Enter API Key>" />
 
         <activity
             android:name=".views.storymap.StoryMapActivity"
